# quanta_alarma

./: .gitignore  CMakeLists.txt  Makefile  QuantaAlarma.cpp  README.md  RESTRICTIONS.md
docs/: FAQ.md  RESTRICTIONS_ENHANCEMENTS.md  architecture.md  architecture_overview.md  enhancements.md  example_dev.conf  example_minimal.conf  example_strict_policy.conf  glossary.md  phase_i_plan.md  phase_ii_plan.md  phase_iii_plan.md  plan.md  quanta_spectrum_contributions.md  rule_authoring_guide.md  troubleshooting.md
include/: AnalysisEngine.h  RiskScorer.h
include/alerting/: AlertingSystem.h
include/analysis/: AnalysisEngine.h
include/app/: ConfigManager.h  Reporter.h
include/scoring/: RiskScorer.h
src/: AlertingSystem.cpp  AnalysisEngine.cpp  RiskScorer.cpp
src/alerting/: AlertingSystem.cpp
src/analysis/: AnalysisEngine.cpp
src/app/: ConfigManager.cpp  Reporter.cpp  main.cpp
src/scoring/: RiskScorer.cpp
tests/: AnalysisEngineTests.cpp  BddTests.cpp  TestRunner.cpp  UnitTests.cpp
tests/sdd/: run_sdd_suite.sh  sorrel_checkins.md  sorrel_checkouts.md
tests/sdd/cards/: VerificationClass.cpp
tests/sdd/cpp/util/: fact_utils.h
tests/sdd/facts/: quanta_alarma.facts
